--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -20,41 +20,49 @@
 
 <div class="responsive-table">
   <table mat-table
-         [dataSource]="postsPageResponse.content">
-
-    <ng-container matColumnDef="createdAt">
-      <th mat-header-cell *matHeaderCellDef><h4>Created At</h4></th>
-      <td mat-cell *matCellDef="let row">{{row.createdAt | date}}</td>
-    </ng-container>
+         [dataSource]="postsPageResponse.data">
 
     <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef><h4>Title</h4></th>
-      <td mat-cell *matCellDef="let row">{{row.title}}</td>
+      <td mat-cell *matCellDef="let row">{{row.title | truncate: 50 : true}}</td>
     </ng-container>
 
     <ng-container matColumnDef="content">
-      <th mat-header-cell *matHeaderCellDef><h4>Conent</h4></th>
-      <td mat-cell *matCellDef="let row">{{row.content}}</td>
+      <th mat-header-cell *matHeaderCellDef><h4>Content</h4></th>
+      <td mat-cell *matCellDef="let row">{{row.content | truncate: 50 : true }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="createdAt">
+      <th mat-header-cell *matHeaderCellDef><h4>Created At</h4></th>
+      <td mat-cell *matCellDef="let row">{{row.created_at | date: 'h:mm a, MMM d, y' }}</td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef><h4>Actions</h4></th>
       <td mat-cell *matCellDef="let row">
+        <button mat-button (click)="onViewPostClicked(row)">
+          View
+        </button>
+
         <button mat-button (click)="onEditPostClicked(row)">
-          Sửa
+          Edit
+        </button>
+
+        <button mat-button (click)="onDeletePostClicked(row)">
+          Delete
         </button>
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="['createdAt', 'title', 'content', 'actions']"></tr>
+    <tr mat-header-row *matHeaderRowDef="tableColumns"></tr>
 
     <tr mat-row
-        *matRowDef="let row; columns: ['createdAt', 'title', 'content', 'actions'];"></tr>
+        *matRowDef="let row; columns: tableColumns;"></tr>
   </table>
 </div>
 
 <mat-paginator #postsPaginator
-               [length]="postsPageResponse.totalElements"
+               [length]="postsPageResponse.total"
                [pageSize]="postsPageSize"
                [showFirstLastButtons]="true">
 </mat-paginator>
